# lection-debug-and-profile-hw

./: CMakeLists.txt
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  benchmark_stack.cpp
src/: main.c  stack.c  stack.h
test/: cov.sh  test_stack.cpp
